sources = files(
    'Application.vala',

    'configs/Constants.vala',
    'configs/Settings.vala',

    'ciphers/Caesar.vala',
    'ciphers/Atbash.vala',
    'ciphers/PolybiusSquare.vala',
    'ciphers/Ascii.vala',
    'ciphers/Rot13.vala',
    'ciphers/Base64.vala',

    'controllers/AppController.vala',

    'views/AsciiEncodingView.vala',
    'views/AtbashCipherView.vala',
    'views/Base64EncodingView.vala',
    'views/CaesarCipherView.vala',
    'views/CipherView.vala',
    'views/HashFunctionsView.vala',
    'views/PolybiusSquareCipherView.vala',
    'views/ROT13CipherView.vala',
    
    'Main.vala',
    
    'widgets/Button.vala',
    'widgets/CipherBox.vala',
    'widgets/Entry.vala',
    'widgets/HeaderBar.vala',
    'widgets/Label.vala',
    'widgets/ScrolledWindow.vala',
    'widgets/TextView.vala',

    'Window.vala'
)
