sources = files(
    'Application.vala',

    'Configs/Constants.vala',

    'Ciphers/Caesar.vala',
    'Ciphers/Atbash.vala',
    'Ciphers/PolybiusSquare.vala',
    'Ciphers/Ascii.vala',
    'Ciphers/Rot13.vala',
    'Ciphers/Base64.vala',
    'Ciphers/Vigenere.vala',

    'Controllers/AppController.vala',

    'Views/AsciiEncodingView.vala',
    'Views/AtbashCipherView.vala',
    'Views/Base64EncodingView.vala',
    'Views/CaesarCipherView.vala',
    'Views/CipherView.vala',
    'Views/HashFunctionsView.vala',
    'Views/PolybiusSquareCipherView.vala',
    'Views/ROT13CipherView.vala',
    'Views/VigenereCipherView.vala',
    
    'Main.vala',
    
    'Widgets/Button.vala',
    'Widgets/CipherBox.vala',
    'Widgets/Entry.vala',
    'Widgets/HeaderBar.vala',
    'Widgets/Label.vala',
    'Widgets/ScrolledWindow.vala',
    'Widgets/TextView.vala',

    'Window.vala'
)
